fix: allow all origins in CORS (security handled by JWT)