@@ -1,6 +1,5 @@
 package com.project.interviewai.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -13,15 +12,12 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}")
-    private String allowedOrigins;
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow frontend origins (configurable via CORS_ALLOWED_ORIGINS env var)
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        // Allow all origins via pattern (safe because security is handled by JWT, not CORS)
+        configuration.setAllowedOriginPatterns(List.of("*"));
 
         // Allow HTTP methods
         configuration.setAllowedMethods(Arrays.asList(
@@ -49,3 +45,4 @@ public class CorsConfig {
         return source;
     }
 }
+
